added public for hosting by cyclic.sh

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>First Steps</title>
-    </head>
+    <script defer type="application/javascript" src="js/bundleName.js"></script></head>
     <body>
     </body>
 </html>
