--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>First Steps</title>
+        <script src="https://cdn.babylonjs.com/babylon.js"></script>
     </head>
     <body>
     </body>
