--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>First Steps</title>
         <script src="https://cdn.babylonjs.com/babylon.js"></script>
+        <script src="./game.js" defer></script>
     </head>
     <body>
     </body>
